# test_mailru

./: .gitignore  CMakeLists.txt  build.sh
include/builder/: conf.h  downloader.h  markov.h  read_chunk.h  service.h
include/common/: conf.h  log.h  markov.h
include/complete/: conf.h
src/: CMakeLists.txt
src/builder/: CMakeLists.txt  downloader.cc  markov.cc  service.cc
src/common/: CMakeLists.txt  markov.cc
tests/integration/: CMakeLists.txt  integration.py
tests/unit/: CMakeLists.txt  insert_to_markov_test.cc  markov_test.cc  read_chunk_test.cc
